force-app/main/default/objects/Student_Enrolment__c/Student_Enrolment__c.object-meta.xml
<CustomObject>
    <label>Student Enrolment</label>
    <nameField>
        <label>Student Enrolment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Enrolments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>