force-app/main/default/objects/Student_Enrolment__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <referenceTo>Activity__c</referenceTo>
    <relationshipLabel>Student Enrolments</relationshipLabel>
    <relationshipName>Student_Enrolments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>