force-app/main/default/objects/Student_Enrolment__c/fields/Diff_Date__c.field-meta.xml
<CustomField>
    <fullName>Diff_Date__c</fullName>
    <description>2.A new Student Enrolment cannot be created before two days of Activity Start Date. For example, Start Date is 20th March, the new enrolments are only allowed to be created before 18th March.</description>
    <formula>Activity__r.start_date__c  -  TODAY()</formula>
    <label>Diff Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>