force-app/main/default/objects/Student_Enrolment__c/fields/Participated_in_Activity__c.field-meta.xml
<CustomField>
    <fullName>Participated_in_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participated in Activity</label>
    <type>Checkbox</type>
</CustomField>