force-app/main/default/objects/Student_Enrolment__c/validationRules/Max_no_of_enrolments_on_activity.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_no_of_enrolments_on_activity</fullName>
    <active>false</active>
    <errorConditionFormula>Activity__r.Number_of_Enrolments__c  &gt; Activity__r.Max_number_of_Enrolments_allowed__c</errorConditionFormula>
    <errorMessage>The Total number of Student Enrolments on an activity should not exceed the “Max number of Enrolments allowed” on Activity.</errorMessage>
</ValidationRule>