force-app/main/default/objects/Student_Enrolment__c/validationRules/two_days_of_Activity_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>two_days_of_Activity_Start_Date</fullName>
    <active>false</active>
    <errorConditionFormula>Diff_Date__c  &gt;= 2</errorConditionFormula>
    <errorMessage>A new Student Enrolment cannot be created before two days of Activity Start Date.</errorMessage>
</ValidationRule>